--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- Background: http://bennettfeely.com/gradients/ -->
 <html>
 	<head>
-		<title>Emily Black</title>
+		<title>Jyothi Bhuvanagiri</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,7 +19,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1>Emily Black</h1>
+					<h1>Jyothi Buvanagiri lanja </h1>
 					<p>Coder &nbsp;&bull;&nbsp; Gamer &nbsp;&bull;&nbsp; Thinker</p>
 					<nav>
 						<ul>
