--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
 			window.ontouchmove = function() { return false; }
 			window.onorientationchange = function() { document.body.scrollTop = 0; }
 		</script>
+		<script src="/test.js"></script>
 	</body>
 </html>
