--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1>Jyothi Buvanagiri</h1>
+					<h1>Jyothi Bhuvanagiri</h1>
 					<p>Coder &nbsp;&bull;&nbsp; Gamer &nbsp;&bull;&nbsp; Thinker</p>
 
 					<nav>
