--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 					<nav>
 						<ul>
 							<li><a href="EmilyBlackResume.pdf" class="icon fa-file-text"><span class="label">Resume</span></a></li>
-							<li><a href="https://github.com/EmilyBlack95" class="icon fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="https://linkedin.com/in/EmilyBlack95/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="mailto:emily@ou.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://github.com/jyothiPriyaBhuvanagiri" class="icon fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="mailto:bjyothipriya.999@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 					</nav>
 				</header>
